Bug 499845 - Crash when opening properties for recent file
Summary: Crash when opening properties for recent file
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: generic-crash (other bugs)
Version First Reported In: 6.3.0
Platform: Neon Linux
: NOR crash
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords: drkonqi
Depends on:
Blocks:
 
Reported: 2025-02-11 22:36 UTC by Nicolas Fella
Modified: 2025-02-22 04:30 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.3.1
Sentry Crash Report: https://crash-reports.kde.org/organizations/kde/issues/131630/events/ba35de473a0140b192036b08c067e9ff/


Attachments
New crash information added by DrKonqi (142.77 KB, text/plain)
2025-02-11 22:36 UTC, Nicolas Fella
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Nicolas Fella 2025-02-11 22:36:20 UTC
Application: plasmashell (6.3.0)

ApplicationNotResponding [ANR]: false
Qt Version: 6.8.2
Frameworks Version: 6.10.0
Operating System: Linux 6.11.0-17-generic x86_64
Windowing System: Wayland
Distribution: KDE neon 6.2
DrKonqi: 6.3.0 [CoredumpBackend]

-- Information about the crash:
- Open Kickoff
- Go to places
- Go to Frequently used
- Right click on a file
- Click Properties

The crash can be reproduced every time.

-- Backtrace (Reduced):
#6  __pthread_kill_implementation (no_tid=0, signo=6, threadid=<optimized out>) at ./nptl/pthread_kill.c:44
#7  __pthread_kill_internal (signo=6, threadid=<optimized out>) at ./nptl/pthread_kill.c:78
#8  __GI___pthread_kill (threadid=<optimized out>, signo=signo@entry=6) at ./nptl/pthread_kill.c:89
#9  0x000072ed02a4527e in __GI_raise (sig=sig@entry=6) at ../sysdeps/posix/raise.c:26
#10 0x000072ed02a288ff in __GI_abort () at ./stdlib/abort.c:79


Reported using DrKonqi
Comment 1 Nicolas Fella 2025-02-11 22:36:21 UTC
Created attachment 178168 [details]
New crash information added by DrKonqi

DrKonqi auto-attaching complete backtrace.
Comment 2 Bug Janitor Service 2025-02-11 23:06:52 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/5187
Comment 3 Nicolas Fella 2025-02-16 17:38:27 UTC
Git commit 652368e805cbe2bc7ed6c68714005f685bf97ad9 by Nicolas Fella.
Committed on 16/02/2025 at 17:02.
Pushed by nicolasfella into branch 'master'.

[kicker] Fix properties dialog for recent files

We get a path from the model, properly turn it into a URL

M  +1    -1    applets/kicker/plugin/recentusagemodel.cpp

https://invent.kde.org/plasma/plasma-workspace/-/commit/652368e805cbe2bc7ed6c68714005f685bf97ad9
Comment 4 Nicolas Fella 2025-02-16 17:40:29 UTC
Git commit 0b17afaa31be15e072eb15315adf3d424395383d by Nicolas Fella.
Committed on 16/02/2025 at 17:40.
Pushed by nicolasfella into branch 'Plasma/6.3'.

[kicker] Fix properties dialog for recent files

We get a path from the model, properly turn it into a URL
(cherry picked from commit 652368e805cbe2bc7ed6c68714005f685bf97ad9)

M  +1    -1    applets/kicker/plugin/recentusagemodel.cpp

https://invent.kde.org/plasma/plasma-workspace/-/commit/0b17afaa31be15e072eb15315adf3d424395383d