[kicker] Fix properties dialog for recent files

We get a path from the model, properly turn it into a URL

BUG: 499845
(cherry picked from commit 652368e805cbe2bc7ed6c68714005f685bf97ad9)